web-cli: add documentation

--- a/meta-secret/web-cli/ui/index.html
+++ b/meta-secret/web-cli/ui/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="description" content="Password Management"/>
+    <meta name="description" content="Decentralized Secret Manager"/>
     <meta name="keywords"
           content="Password, Shamir Secret Sharing, Social Recovery, Secret Zero Problem, Storing Password Securely, Protect Passwords, Distributed Password Storage, Managing Passwords"/>
     <meta name="google-site-verification" content="SoPFu3sq9zhPkf3ahjk7S9lWK9TmChsXq-jtMC-6xRI"/>
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Meta Secret App</title>
+    <title>Meta Secret</title>
 </head>
 
 <body>
